--- a/rawphotoscleanup/App.config
+++ b/rawphotoscleanup/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="rawphotoscleanup.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <rawphotoscleanup.Properties.Settings>
+            <setting name="DcrawExeName" serializeAs="String">
+                <value>tools\dcraw-9.27-ms-64-bit.exe </value>
+            </setting>
+        </rawphotoscleanup.Properties.Settings>
+    </applicationSettings>
 </configuration>
