--- a/rawphotoscleanup/Properties/Settings.settings
+++ b/rawphotoscleanup/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="rawphotoscleanup.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="DcrawExeName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">tools\dcraw-9.27-ms-64-bit.exe </Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
