--- a/rawphotoscleanup/Properties/Settings.settings
+++ b/rawphotoscleanup/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="DcrawExeName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">tools\dcraw-9.27-ms-64-bit.exe </Value>
     </Setting>
+    <Setting Name="LastPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
