moved the last selected path to its own class moved OpenDirectory to VM

--- a/rawphotoscleanup/rawphotoscleanup.csproj
+++ b/rawphotoscleanup/rawphotoscleanup.csproj
@@ -79,6 +79,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ImageProcessing\BitmapImageTools.cs" />
+    <Compile Include="UserSettings\ILastSelectedPathManager.cs" />
+    <Compile Include="UserSettings\LastSelectedPathManager.cs" />
     <Compile Include="ViewModel\FileItem.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
