moved folder browser dialog logic to its own class

--- a/rawphotoscleanup/rawphotoscleanup.csproj
+++ b/rawphotoscleanup/rawphotoscleanup.csproj
@@ -78,6 +78,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FolderBrowserService.cs" />
+    <Compile Include="IFolderBrowserService.cs" />
     <Compile Include="ImageProcessing\BitmapImageTools.cs" />
     <Compile Include="IMessageBoxService.cs" />
     <Compile Include="UserSettings\ILastSelectedPathManager.cs" />
